--- a/Desktop/ProyectoIntegrador-2022/backend/javierdigirolamo/pom.xml
+++ b/Desktop/ProyectoIntegrador-2022/backend/javierdigirolamo/pom.xml
@@ -65,7 +65,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+                
                 
     </dependencies>
 
