--- a/Desktop/ProyectoIntegrador-2022/backend/javierdigirolamo/src/main/resources/application.properties
+++ b/Desktop/ProyectoIntegrador-2022/backend/javierdigirolamo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ufhlcpcbuasaiukc:t5G1WWciwd93dqnRAAUD@bwqtb8kne0fshdoqrwla-mysql.services.clever-cloud.com:3306/bwqtb8kne0fshdoqrwla
-spring.datasource.username=ufhlcpcbuasaiukc
-spring.datasource.password=t5G1WWciwd93dqnRAAUD
+spring.datasource.url=jdbc:mysql://localhost:3306/backendjdg?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=A25875102a*
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
