--- a/Desktop/ProyectoIntegrador-2022/backend/javierdigirolamo/src/main/resources/application.properties
+++ b/Desktop/ProyectoIntegrador-2022/backend/javierdigirolamo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ufhlcpcbuasaiukc:t5G1WWciwd93dqnRAAUD@bwqtb8kne0fshdoqrwla-mysql.services.clever-cloud.com:3306/bwqtb8kne0fshdoqrwla
+spring.datasource.url=mysql://ufhlcpcbuasaiukc:t5G1WWciwd93dqnRAAUD@bwqtb8kne0fshdoqrwla-mysql.services.clever-cloud.com:3306/bwqtb8kne0fshdoqrwla
 spring.datasource.username=ufhlcpcbuasaiukc
 spring.datasource.password=t5G1WWciwd93dqnRAAUD
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
